<resources>
    <string name="app_name">Build it Bigger</string>
    <string name="instructions">Press the button for a delicious joke!</string>
    <string name="button_text">Tell Joke</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-2124824032206817/4660505684</string>
    <string name="move_to_joke_screen">Open Joke screen</string>
    <string name="online_move_to_joke_screen">Get Joke Online</string>
    <string name="no_internet_connectivity">Please check your Internet connection!!</string>
    <string name="interstitial_full_screen">ad</string>
    <string name="ip_url">http://192.168.1.4:8080/_ah/api/</string>
</resources>
